--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+@-ms-viewport {
+  width: device-width;
+  zoom: 1;
+  user-zoom: fixed;
+  max-zoom: 1;
+} 
+
+@-o-viewport {
+  width: device-width;
+  zoom: 1;
+  user-zoom: fixed;
+  max-zoom: 1;
+}
+
+@viewport {
+  width: device-width;
+  zoom: 1;
+  user-zoom: fixed;
+  max-zoom: 1;
+}
+
 html, body {
   color: #333333;
   background: #f5f5f5;
@@ -85,54 +106,7 @@ main {
   margin: 0 auto;
 }
 
-.home input[type="radio"]::before {
-  text-align: center;
-  height: 100%;
-  width: 100%;
-}
-
-.home input[type="radio"][value="1"] {
-  background: #99cc99;
-}
-
-.home input[type="radio"][value="0"] {
-  background: #f2777a;
-}
-
-.home input[type="radio"][value="1"]:hover {
-  background: #a2c3a2;
-  border: 0.5em solid rgba(0,0,0,0.2);
-  line-height: 3em;
-}
-
-.home input[type="radio"][value="0"]:hover {
-  background: #eb7f81;
-  border: 0.5em solid rgba(0,0,0,0.2);
-  line-height: 3em;
-} 
-
-.home input[type="radio"][value="1"]:checked {
-  background: #a2c3a2;
-  border: 0.5em solid rgba(0,0,0,0.2);
-  line-height: 3em;
-}
-
-.home input[type="radio"][value="0"]:checked {
-  background: #eb7f81;
-  border: 0.5em solid rgba(0,0,0,0.2);
-  line-height: 3em;
-} 
-
-.home input[type="radio"][value="1"]::before {
-  content: "Zusagen";
-}
-
-.home input[type="radio"][value="0"]::before {
-  content: "Absagen";
-}
-
-.home input[type="radio"] {
-  -webkit-appearance: none;
+.home label {
   height: 4em;
   width: 50%;
   float: left;
@@ -146,6 +120,35 @@ main {
   padding: 0;
   border: none;
   border-radius: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  user-select: none;
+}
+
+.home label.zusagen {
+  background: #99cc99;
+}
+
+.home label.absagen {
+  background: #f2777a;
+}
+
+.home label.zusagen:hover {
+  background: #a2c3a2;
+  border: 0.5em solid rgba(0,0,0,0.2);
+  line-height: 3em;
+}
+
+.home label.absagen:hover {
+  background: #eb7f81;
+  border: 0.5em solid rgba(0,0,0,0.2);
+  line-height: 3em;
+}
+
+.home input[type="radio"] {
+  display: none;
+  visibility: hidden;
 }
 
 ul {
@@ -184,7 +187,7 @@ main div:last-child h2 {
 }
 
 .or a {
-  color: #333333;
+  color: #369;
   text-decoration: none;
 }
 
@@ -275,11 +278,11 @@ main div:last-child h2 {
     font-size: 1.5em;
   }
 
-  .home input[type="radio"] {
+  .home label {
     width: 100%;
   }
 
-  .home input[type="radio"]:last-child {
+  .home label.absagen {
     margin-bottom: 1em;
   }
   
